--- a/package.json
+++ b/package.json
@@ -107,5 +107,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PanJiaChen/vue-element-admin.git"
-  }
+  },
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "tests"
+  },
+  "homepage": "https://github.com/PanJiaChen/vue-element-admin#readme"
 }
